# genesys

./: README.md  alpha.py  convergence_analysis.py  db.py  ga.py  main.py  mc.py  mcmc.py  plot_prym_np_compare_all.py  pool.py  pyproject.toml  requirements.txt  run_all_convergence.sh  test.py
PRyM/: PRyM_main.py  PRyM_main_m2.py  PRyM_main_m3.py
data/: m1vexp.sql  m1vexp_bbn.sql  m1vexp_mc.sql  m1vphi2.sql  m1vphi24.sql  m1vphi24_bbn.sql  m1vphi24_mc.sql  m1vphi2_bbn.sql  m1vphi2_mc.sql  m2vexp.sql  m2vexp_bbn.sql  m2vexp_mc.sql  m2vphi2.sql  m2vphi24.sql  m2vphi24_bbn.sql  m2vphi24_mc.sql  m2vphi2_bbn.sql  m2vphi2_mc.sql  m3vexp.sql  m3vexp_bbn.sql  m3vexp_mc.sql  m3vphi2.sql  m3vphi24.sql  m3vphi24_bbn.sql  m3vphi24_mc.sql  m3vphi2_bbn.sql  m3vphi2_mc.sql
models/: __init__.py  m1v0.py  m1vexp.py  m1vphi2.py  m1vphi24.py  m2v0.py  m2vexp.py  m2vphi2.py  m2vphi24.py  m3v0.py  m3vexp.py  m3vphi2.py  m3vphi24.py  model.py  potential.py
models/tests/: test_model.py
