[project]
name = "genesys"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "alembic==1.16.4",
    "banal==1.0.6",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "dask==2024.8.0",
    "dataset==1.6.2",
    "dill==0.4.0",
    "distributed==2024.8.0",
    "dotenv==0.9.9",
    "emcee==3.1.6",
    "fonttools==4.59.0",
    "fsspec==2025.7.0",
    "greenlet==3.2.3",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "julia==0.6.2",
    "kiwisolver==1.4.7",
    "llvmlite==0.43.0",
    "locket==1.0.0",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "matplotlib==3.9.4",
    "msgpack==1.1.1",
    "multiprocess==0.70.18",
    "numba==0.60.0",
    "numpy==2.0.2",
    "packaging==25.0",
    "partd==1.4.2",
    "pillow==11.3.0",
    "psutil==7.0.0",
    "pymysql==1.1.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "schwimmbad==0.4.2",
    "scipy==1.13.1",
    "six==1.17.0",
    "sortedcontainers==2.4.0",
    "sqlalchemy==1.4.54",
    "tblib==3.1.0",
    "termcolor==3.1.0",
    "tomli==2.2.1",
    "toolz==1.0.0",
    "tornado==6.5.1",
    "typing-extensions==4.14.1",
    "urllib3==2.5.0",
    "zict==3.0.0",
    "zipp==3.23.0"
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["models*", "PRyM*"]
exclude = ["data*", "PRyMrates*", "tests*"]

[tool.setuptools.package-data]
"*" = ["*.py"]
